--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<h1>Hello World</h1>
+<!--
+// made with v0 by Vercel.
+// hopefully I'll rewrite it myself!
+-->
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<main class="container mx-auto px-4 py-12 md:px-6 md:py-16 lg:px-8 lg:py-20">
+    <section class="grid gap-8 md:grid-cols-2 lg:gap-12">
+        <div>
+            <div
+                class="rounded-lg border bg-card text-card-foreground shadow-sm p-6 md:p-8 lg:p-10"
+                data-v0-t="card"
+            >
+                <div class="space-y-4">
+                    <h1
+                        class="text-3xl font-bold tracking-tight md:text-4xl lg:text-5xl"
+                    >
+                        shy
+                    </h1>
+                    <p class="text-slate-500 dark:text-slate-400">
+                        making tools that augment humans.
+                    </p>
+                    <ul
+                        class="space-y-2 text-sm text-slate-500 dark:text-slate-400"
+                    >
+                        <li>• [put some beliefs here]</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div
+                class="rounded-lg border bg-card text-card-foreground shadow-sm p-6 md:p-8 lg:p-10"
+                data-v0-t="card"
+            >
+                <div class="space-y-4">
+                    <h2
+                        class="text-2xl font-bold tracking-tight md:text-3xl lg:text-4xl"
+                    >
+                        writing
+                    </h2>
+                    <div
+                        class="space-y-2 text-sm text-slate-500 dark:text-slate-400"
+                    >
+                        <a class="hover:underline" href="#"> test post </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
