--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                     <div
                         class="space-y-2 text-sm text-slate-500 dark:text-slate-400"
                     >
-                        <a class="hover:underline" href="#"> test post </a>
+                        <a class="hover:underline" href="test.html">
+                            claude wrote this post
+                        </a>
                     </div>
                 </div>
             </div>
