⚖️ font size changes

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             >
                 <div class="space-y-4">
                     <h1
-                        class="text-3xl font-bold tracking-tight md:text-4xl lg:text-5xl"
+                        class="text-4xl font-bold tracking-tight md:text-4xl lg:text-7xl"
                     >
                         shy
                     </h1>
-                    <p class="text-slate-500 dark:text-slate-400">
+                    <p class="text-slate-500 text-2xl dark:text-slate-400">
                         making tools that augment humans.
                     </p>
                     <ul
-                        class="space-y-2 text-sm text-slate-500 dark:text-slate-400"
+                        class="space-y-2 text-2xl text-slate-500 dark:text-slate-400"
                     >
                         <li>• [put some beliefs here]</li>
                     </ul>
@@ -40,15 +40,15 @@
             >
                 <div class="space-y-4">
                     <h2
-                        class="text-2xl font-bold tracking-tight md:text-3xl lg:text-4xl"
+                        class="text-4xl font-bold tracking-tight md:text-3xl lg:text-5xl"
                     >
                         writing
                     </h2>
                     <div
-                        class="space-y-2 text-sm text-slate-500 dark:text-slate-400"
+                        class="space-y-2 text-2xl text-slate-500 dark:text-slate-400"
                     >
                         <a class="hover:underline" href="test.html">
-                            claude wrote this post
+                            > claude wrote this post
                         </a>
                     </div>
                 </div>
