--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul
                         class="space-y-2 text-2xl text-slate-500 dark:text-slate-400"
                     >
-                        <li>• [put some beliefs here]</li>
+                        <li>• elegance is simplicity</li>
                     </ul>
                 </div>
             </div>
